# bedrock-mcp-sample

./: README.md  pyproject.toml  requirements.txt
config/: config.json
src/: bedrock.py  frontend.py
