[project]
name = "gradio-sample"
version = "0.1.0"
description = "Gradio sample project with Amazon Bedrock integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "gradio",
    "boto3",
    "requests",
    "python-dotenv",  # 'dotenv' パッケージは実際には 'python-dotenv' という名前です
    "anyio>=4.5",
    "click>=8.1.0",
    "httpx>=0.27",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true
